# Project_ESP32S3VM

./: .gitignore  build-win.cmd
.github/workflows/: arduino-bridge-sketch.yml  gui-build-linux-windows.yml  release-gui-with-qemu.yml
docs/: Esp32-s3_technical_reference_manual_en.md  esp32s3_execution_backlog.md  esp32s3_full_simulator_roadmap.md  esp32s3_peripheral_audit_report.md  esp32s3_qemu_detailed_comparison.md  esp32s3_qemu_differences.md  esp32s3_trm_full_subsystem_verification_2026-02-27.md
gui-esp32s3-simulator/: .gitignore  CMakeLists.txt  README.md
gui-esp32s3-simulator/backend/: PeripheralManager.cpp  PeripheralManager.h  QemuController.cpp  QemuController.h
gui-esp32s3-simulator/device-sims/: gpio_test_sim.py  jsonrpc_stdio.py  sht21_sample.csv  sht21_sim.py  sht21_sim.py.bak  smoke_bridge_check.py  spi_mem_sim.py  ssd1306_sim.py  ssd1331_sim.py  uart_loopback_sim.py  uart_loopback_sim.py.bak
gui-esp32s3-simulator/docs/: architecture.md
gui-esp32s3-simulator/peripherals/: peripherals.example.json  peripherals.schema.json  peripherals.ssd1331_sht21.example.json
gui-esp32s3-simulator/src/: ControlPanelWidget.cpp  ControlPanelWidget.h  CpuStatusWidget.cpp  CpuStatusWidget.h  DebugWidget.cpp  DebugWidget.h  DevicePanelBase.cpp  DevicePanelBase.h  DevicePanelFactory.cpp  DevicePanelFactory.h  DisplayPanel.cpp  DisplayPanel.h  GenericDevicePanel.cpp  GenericDevicePanel.h  MainWindow.cpp  MainWindow.h  PeripheralsWidget.cpp  PeripheralsWidget.h  PinConnectionWidget.cpp  PinConnectionWidget.h  SchemaDevicePanel.cpp  SchemaDevicePanel.h  SensorPanel.cpp  SensorPanel.h  SerialConsoleWidget.cpp  SerialConsoleWidget.h  SpiFlashPanel.cpp  SpiFlashPanel.h  UartDevicePanel.cpp  UartDevicePanel.h
gui-esp32s3-simulator/tests/: BridgeContractTest.cpp
tests/: ci_soak_test.sh
tests/arduino/: README.md  build_all_sketches.sh  build_esp32s3_bridge_tester.sh
tests/arduino/combined_peripheral_test/: combined_peripheral_test.ino
tests/arduino/esp32s3_bridge_tester/: esp32s3_bridge_tester.ino
tests/arduino/sht21_sensor_test/: sht21_sensor_test.ino
tests/arduino/spi_flash_test/: spi_flash_test.ino
tests/arduino/ssd1306_display_test/: ssd1306_display_test.ino
tests/arduino/ssd1331_sht21_test/: ssd1331_sht21_test.ino
tests/arduino/uart_loopback_test/: uart_loopback_test.ino
